Fixed the size of select random button on home page same as search button on small screens

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -404,5 +404,9 @@ button {
         min-width: auto;
         margin-bottom: 0.5em;
     }
+
+    .btn-group{
+        height: 100%;
+    }
     
 }
